styles.css
@font-face {
  font-family: "Fraunces";
  font-weight: 600;
  src: local("Fraunces_144pt-SemiBold"),
    url("/assets/fonts/Fraunces_144pt-SemiBold.woff2"),
    url("/assets/fonts/Fraunces_144pt-SemiBold.woff");
}

@font-face {
  font-family: "Manrope";
  font-weight: 400;
  src: local("Manrope-Regular"),
    url("assets/fonts/manrope-v15-latin-regular.woff2"),
    url("/assets/fonts/manrope-v15-latin-regular.woff");
}

@font-face {
  font-family: "Manrope";
  font-weight: 700;
  src: local("Manrope-Bold"), url("/assets/fonts/manrope-v15-latin-700.woff2"),
    url("/assets/fonts/manrope-v15-latin-700.woff");
}

/* ------------------- CSS Reset ------------------- */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

*:focus-visible {
  outline: 0.125rem dotted var(--clr-primary-400);
  outline-offset: 0.125rem;
}

img,
svg,
picture {
  display: block;
  max-width: 100%;
  height: auto;
}

input,
button {
  font: inherit;
}

/* ------------------- CSS Variables ------------------- */
:root {
  --ff-fraunces: "Fraunces", serif;
  --ff-manrope: "Manrope", sans-serif;

  --fw-regular: 400;
  --fw-semi-bold: 600;
  --fw-bold: 700;

  --fs-400: 1rem;
  --fs-500: 1.25rem;
  --fs-600: 1.75rem;
  --fs-700: 2rem;
  --fs-900: 3.125rem;

  --clr-primary-400: hsl(150, 100%, 63%);
  --clr-primary-700: hsl(273, 85%, 13%);

  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-neutral-200: hsl(276, 100%, 99%);
  --clr-neutral-400: hsl(271, 12%, 34%);

  --ff-heading: var(--ff-fraunces);
  --ff-body: var(--ff-manrope);

  --fs-body: var(--fs-400);
  --fs-primary-heading: var(--fs-900);
  --fs-secondary-heading: var(--fs-700);
  --fs-tertiary-heading: var(--fs-600);

  --clr-primary-body: var(--clr-neutral-100);
  --clr-secondary-body: var(--clr-neutral-400);
}

/* ------------------- Utility Classes ------------------- */
.visually-hidden:not(:focus):not(:active) {
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/* ------------------- End of Utility Classes ------------------- */

body {
  min-height: 100vh;
  font-family: var(--ff-body);
  font-size: var(--fs-400);
  font-weight: var(--fw-regular);
  text-align: center;
  color: var(--clr-primary-body);
  background-color: var(--clr-neutral-100);
}

.header {
  width: 100%;
  background-color: var(--clr-primary-700);
}

.header-wrapper {
  width: 100%;
  max-width: 74rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 1rem;
}

.logo {
  width: 6rem;
  height: 1.5rem;
}

.header__cta {
  font-weight: var(--fw-bold);
  line-height: 2;
  letter-spacing: -0.01rem;
  color: var(--clr-primary-body);
  border-bottom: 0.1875rem solid var(--clr-primary-400);
}

.header__cta:hover {
  color: var(--clr-primary-400);
}

.main {
  width: 100%;
  position: relative;
  overflow-x: hidden;
}

.section {
  padding-inline: 1rem;
}

.section-hero {
  width: 100%;
  position: relative;
  gap: 2.5rem;
  background-color: var(--clr-neutral-200);
  z-index: 2;
}

.section-hero::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 78%;
  background-image: url("/assets/images/hero-curved-bg.svg");
  background-position: bottom;
  background-size: cover;
  z-index: -1;
}

.hero__title {
  max-width: 25rem;
  font-family: var(--ff-heading);
  font-size: var(--fs-primary-heading);
  font-weight: var(--fw-semi-bold);
  line-height: 1;
  margin-top: 2rem;
}

.hero__title em {
  font-style: normal;
  text-decoration: underline;
  text-decoration-color: var(--clr-primary-400);
  text-decoration-thickness: 0.1875rem;
  text-underline-offset: 0.6rem;
}

.btn {
  font-weight: var(--fw-bold);
  color: var(--clr-primary-700);
  background-color: var(--clr-primary-400);
  border: 0.15rem solid var(--clr-primary-400);
  padding: 1rem 1.5rem;
}

.btn:hover {
  color: var(--clr-primary-400);
  background-color: transparent;
}

.hero__img {
  width: 100%;
  max-width: 32.125rem;
  margin-top: 0.5rem;
}

.section-features {
  width: 100%;
  position: relative;
  padding-block: 3rem 4.5rem;
}

.section-features::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  background-image: url("/assets/images/features-bg-curve.svg");
  background-position: bottom;
  background-size: cover;
  z-index: -1;
}

.features {
  max-width: 36rem;
  gap: 2.5rem;
}

.feature {
  display: grid;
  grid-auto-flow: row;
  justify-items: center;
  align-items: center;
  gap: 1rem;
}

.feature__number {
  width: 3rem;
  height: 3rem;
  font-family: var(--ff-heading);
  font-size: var(--fs-500);
  color: var(--clr-primary-700);
  border: 0.0625rem solid var(--clr-neutral-400);
  border-radius: 100%;
}

.feature__title {
  font-family: var(--ff-heading);
  font-size: var(--fs-tertiary-heading);
  color: var(--clr-primary-700);
  margin-top: 0.5rem;
}

.feature__description {
  line-height: 1.75;
  color: var(--clr-secondary-body);
}

.section-founder {
  position: relative;
  margin-top: 21rem;
}

.founder__img {
  width: 100%;
  max-width: 17.5rem;
  position: absolute;
  left: 50%;
  transform: translate(-8.8rem, -14.3rem);
  z-index: -2;
}

.founder-message-wrapper {
  max-width: 32.125rem;
  background-color: var(--clr-primary-700);
  gap: 1rem;
  padding: 2rem;
}

.founder__title {
  font-family: var(--ff-heading);
  font-size: var(--fs-secondary-heading);
}

.founder__message {
  line-height: 1.75;
}

.founder__btn {
  margin-top: 0.5rem;
}

.footer {
  gap: 3.625rem;
  padding-block: 4.625rem 4rem;
}

.social-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.75rem;
}

.social-icon {
  width: 1.25rem;
  height: 1.25rem;
  fill: var(--clr-neutral-400);
}

.social-icon:hover {
  fill: var(--clr-primary-700);
}

/* ------------------- Media Queries ------------------- */
@media (min-width: 48rem) {
  :root {
    --fs-700: 3rem;
    --fs-900: 3.75rem;
  }

  .header-wrapper {
    padding: 2rem 2.5rem;
  }

  .main::before {
    content: url("/assets/images/bg-pattern-1.svg");
    position: absolute;
    top: -2rem;
    left: -14rem;
    z-index: 10;
  }

  .main::after {
    content: url("/assets/images/bg-pattern-2.svg");
    position: absolute;
    top: 9.5rem;
    right: -6rem;
    z-index: 10;
  }

  .section-hero::before {
    height: 73%;
  }

  .hero__title {
    margin-top: 1.5rem;
  }

  .section-features,
  .section-founder {
    text-align: left;
  }

  .section-features {
    padding-block: 3rem 6.5rem;
  }

  .features {
    gap: 3rem;
  }

  .feature {
    grid-template: auto auto / auto auto;
    grid-template-areas:
      "number title"
      "number description";
    justify-items: left;
    gap: 1rem 2rem;
  }

  .feature__number {
    grid-area: number;
  }

  .feature__title {
    grid-area: title;
    margin-top: 0;
  }

  .feature__description {
    grid-area: description;
  }

  .section-founder {
    padding-inline: 2.5rem;
    margin-top: 15.8rem;
  }

  .founder__img {
    left: 50%;
    transform: translate(-21.5rem, -9.5rem);
  }

  .founder-message-wrapper {
    position: relative;
    align-items: start;
    transform: translateX(5.375rem);
    gap: 1.5rem;
    padding: 3.5rem;
    padding-top: 3rem;
  }

  .founder-message-wrapper:after {
    content: url("/assets/images/bg-pattern-3.svg");
    position: absolute;
    bottom: -6.5rem;
    right: 1rem;
  }

  .founder__btn {
    margin-top: 0;
  }

  .footer {
    padding-block: 5rem 7.625rem;
  }
}

@media (min-width: 80rem) {
  :root {
    --fs-400: 1.125rem;
    --fs-500: 1.5rem;
    --fs-600: 2rem;
    --fs-700: 3.5rem;
    --fs-900: 5rem;
  }

  .header-wrapper {
    padding: 3.625rem 2.5rem;
  }

  .main::before {
    left: -9rem;
  }

  .main:after {
    right: -3rem;
  }

  .section {
    padding-inline: 2.5rem;
  }

  .section-hero::before {
    height: 75%;
  }

  .hero__title {
    max-width: 32rem;
    margin-top: 0;
  }

  .hero__img {
    max-width: 48rem;
    margin-top: 0;
  }

  .section-features {
    padding-block: 4rem 11rem;
  }

  .features {
    max-width: 69.625rem;
    text-align: center;
    flex-direction: row;
    gap: 1.5rem;
  }

  .feature {
    flex: 1;
    grid-template-areas:
      "number"
      "title"
      "description";
    justify-items: center;
    gap: 1.75rem 0;
  }

  .feature__number {
    width: 3.5rem;
    height: 3.5rem;
  }

  .feature__title {
    margin-top: 1.75rem;
  }

  .section-founder {
    margin-top: 17.5rem;
  }

  .founder__img {
    max-width: 30rem;
    transform: translate(-34.8rem, -10.8rem);
  }

  .founder-message-wrapper {
    max-width: 45.625rem;
    transform: translateX(12rem);
    gap: 2rem;
    padding: 4rem;
  }

  .founder-message-wrapper:after {
    bottom: -4.5rem;
    right: 5rem;
  }

  .footer {
    padding-block: 7.625rem 6.875rem;
  }
}

